--- a/templates/admin/adminStory.html.twig
+++ b/templates/admin/adminStory.html.twig
@@ -43,7 +43,7 @@
             {% for story in storyList %}
             <tr class="{{ story.validated == 1 ? 'published' : 'unpublished' }}">
                 <td>
-                    {{ story.id }}
+                    <span class="mobileUx">Id #</span>{{ story.id }}
                 </td>
                 <td>
                     {{ story.title }}
