--- a/templates/admin/adminNav.html.twig
+++ b/templates/admin/adminNav.html.twig
@@ -1,18 +1,16 @@
 {% block body %}
 <div id="adminNav">
-    <ul class="list-inline">
-        <li>
-            <a href="{{ path('adminUser') }}">Users</a>
-        </li>
-        <li>
-            <a href="{{ path('adminStory') }}">Stories</a>
-        </li>
-        <li>
-            <a href="{{ path('adminTopic') }}">Topics</a>
-        </li>
-        <li>
-            <a href="{{ path('adminPatronage') }}">Patronages</a>
-        </li>
-    </ul>
+    <span class id="closeNav"><i class="fa fa-bars fa-2x"></i></span>
+    <a href="{{ path('adminUser') }}">Users</a>
+    <a href="{{ path('adminStory') }}">Stories</a>
+    <a href="{{ path('adminTopic') }}">Topics</a>
+    <a href="{{ path('adminPatronage') }}">Patronages</a>
 </div>
+
+<span id="open"><i class="fa fa-bars fa-2x" aria-hidden="true"></i></span>
+
+{% endblock %}
+
+{% block javascript %}
+    <script src="{{ asset('js/adminNav.js') }}"></script>
 {% endblock %}
