--- a/templates/admin/adminNav.html.twig
+++ b/templates/admin/adminNav.html.twig
@@ -1,6 +1,7 @@
 {% block body %}
 <div id="adminNav">
     <span class id="closeNav"><i class="fa fa-bars fa-2x"></i></span>
+    <a href="{{ path('admin') }}">Dashboard</a>
     <a href="{{ path('adminUser') }}">Users</a>
     <a href="{{ path('adminStory') }}">Stories</a>
     <a href="{{ path('adminTopic') }}">Topics</a>
