--- a/public/sass/import/_mobile.scss
+++ b/public/sass/import/_mobile.scss
@@ -903,6 +903,12 @@ h1,
 	}
 }
 
+.reminder ul{
+	display: flex;
+	justify-content: space-between;
+	font-size: 2.5rem;
+}
+
 #dashboardAction{
 	.btn{
 		background-color: transparent;
