--- a/templates/admin/adminStoryData.html.twig
+++ b/templates/admin/adminStoryData.html.twig
@@ -5,81 +5,80 @@
     {{ include('admin/adminNav.html.twig') }}
 
     <h1>{{ story.title }}</h1>
-
-    <div class="reminder">
-    <ul class="list-inline">
-        <li>
-            <i class="fa fa-globe" aria-hidden="true"></i>
-            {{ story.worldArea|worldArea }}{{ story.country != null ? ' / '~story.country|country : null }}
-        </li>
-        <li>
-            <i class="fa fa-calendar" aria-hidden="true"></i>
-            {{ story.createdOn|date("d/m/Y") }}
-        </li>
-        <li>
-            <i class="fa fa-user" aria-hidden="true"></i>
-            {{ story.user.fullname }}
-        </li>
-        <li>
-            Published : <i class="{{ story.validated|stateIcon }}" aria-hidden="true"></i>
-        </li>
-    </ul>
-    </div>
-
-    <div>
-        <ul class="list-inline">
-            <li>
-                {{ story.topic.type }}
-            </li>
-            <li>
-                {{ story.patronage.organization }}
-            </li>
-        </ul>
-    </div>
-
-    <div>
-        <h3>Story's abstract</h3>
-        <p>
-            {{ story.abstract|raw}}
-        </p>
-    </div>
-
-    <div>
-        <h3>Story's plot</h3>
-        <p>
-            {{ story.plot|raw }}
-        </p>
-    </div>
-
-    <div>
-        <ul>
-            <li>
-                {{ story.contactEmail }}
-            </li>
-            <li>
-                {{ story.contactPhone }}
-            </li>
-            <li>
-                {{ story.contactPlace }}
-            </li>
-            {% for url in story.urls %}
+    <div class="container-fluid entityData">
+        <div class="reminder">
+            <ul class="list-inline">
                 <li>
-                    <a href="{{ url.href }}">
-                        {{ url.alt }}
-                    </a>
+                    <i class="fa fa-globe" aria-hidden="true"></i>
+                    {{ story.worldArea|worldArea }}{{ story.country != null ? ' / '~story.country|country : null }}
                 </li>
-            {% endfor %}
-        </ul>
-    </div>
+                <li>
+                    <i class="fa fa-bookmark" aria-hidden="true"></i>
+                    {{ story.topic.type }}
+                </li>
+                <li>
+                    <i class="fa fa-users" aria-hidden="true"></i>
+                    {{ story.patronage.organization }}
+                </li>
+                <li>
+                    <i class="fa fa-calendar" aria-hidden="true"></i>
+                    {{ story.createdOn|date("d/m/Y") }}
+                </li>
+                <li>
+                    <i class="fa fa-user" aria-hidden="true"></i>
+                    {{ story.user.fullname }}
+                </li>
+                <li>
+                    Published : <i class="{{ story.validated|stateIcon }}" aria-hidden="true"></i>
+                </li>
+            </ul>
+        </div>
 
-    <a href="{{ path('adminActions',{'entity' : 'story' , 'id' : story.id , 'action' : 'delete'}) }}"
-       class="btn btn-danger">Delete
-    </a>
-    {% if story.validated == false %}
-        <a href="{{ path('adminActions',{'entity' : 'story' , 'id' : story.id , 'action' : 'validate'}) }}"
-           class="btn btn-default">Validate and publish
+        <div>
+            <h3>Story's abstract</h3>
+            <p>
+                {{ story.abstract|raw}}
+            </p>
+        </div>
+
+        <div>
+            <h3>Story's plot</h3>
+            <p>
+                {{ story.plot|raw }}
+            </p>
+        </div>
+
+        <div>
+            <ul>
+                <li>
+                    {{ story.contactEmail }}
+                </li>
+                <li>
+                    {{ story.contactPhone }}
+                </li>
+                <li>
+                    {{ story.contactPlace }}
+                </li>
+                {% for url in story.urls %}
+                    <li>
+                        <a href="{{ url.href }}">
+                            {{ url.alt }}
+                        </a>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+
+        <a href="{{ path('adminActions',{'entity' : 'story' , 'id' : story.id , 'action' : 'delete'}) }}"
+           class="btn btn-danger">Delete
         </a>
-    {% endif %}
-    <a href="{{ path('adminEditStory',{'id' : story.id}) }}" class="btn btn-primary">Edit</a>
+        {% if story.validated == false %}
+            <a href="{{ path('adminActions',{'entity' : 'story' , 'id' : story.id , 'action' : 'validate'}) }}"
+               class="btn btn-default">Validate and publish
+            </a>
+        {% endif %}
+        <a href="{{ path('adminEditStory',{'id' : story.id}) }}" class="btn btn-primary">Edit</a>
+
+    </div>
 
 {% endblock %}
